Fix Discovery Tab, (Mabye) + Mabye winter background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,6 @@
     <meta property="twitter:site:id" content="@ProjectFlippedFn">
     <meta property="twitter:creator" content="@ProjectFlippedFn">
     <meta property="twitter:creator:id" content="@ProjectFlippedFn">
-    <meta content="EMPOWER GAMING" property="og:title">
     <meta content="Flipped is a fortnite private hosting server that provides the best experience for all users" property="og:description">
     <meta content="https://Flippedfn.com" property="og:url">
     <meta data-react-helmet="true" href="https://media.discordapp.net/attachments/1175237541327274075/1175637805678985276/odid.jpg?ex=656bf507&is=65598007&hm=898457cab4a2310f5846fa9100d4b235d2d0ad8390e5c8e1a8c8cd4df3d9097c&=>
@@ -23,10 +22,10 @@
       <section class="TBD">
     <div class="NoSupport">
         <button type="button" onclick="location.href='discord.gg/Flipped'">DOWNLOAD NOW</button>
-        <a href="https://discord.gg/Flippedfn"><i class="fa-brands fa-discord fa-xl" style="color: #686586;"></i></a>
+        <a href="https://discord.gg/Flipped"><i class="fa-brands fa-discord fa-xl" style="color: #686586;"></i></a>
   
         <div class="social">
-            <a href="https://discord.gg/Flippedfn"><i class="fa-brands fa-discord"></i></a>
+            <a href="https://discord.gg/Flipped"><i class="fa-brands fa-discord"></i></a>
             <a href="https://twitter.com/projectFlippedfn"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://www.tiktok.com/@projectFlippedfn"><i class="fa-brands fa-tiktok"></i></a>
             <a href="https://youtube.com/@ProjectFlippedFn"><i class="fa-brands fa-youtube"></i></a>
@@ -38,7 +37,7 @@
       <div class="main-width">
           <header>
               <div class="logo">
-                  <h2><a href="#"><img class="headLogo" src="https://media.discordapp.net/attachments/1175237541327274075/1175251623648444487/2fa0a9db5ad78bda424099711c3c410a.png?ex=656a8d5e&is=6558185e&hm=2427e70783c0587c1706cdaa969d4824bb5ae5e3f5e586bb33b3883db6c804f7&="><p class="Spacer">Flipped</p></a></h2>
+                  <h2><a href="#"><img class="headLogo" src="https://media.discordapp.net/attachments/1151341831565606983/1175683513605947452/2fa0a9db5ad78bda424099711c3c410a1-modified.png?ex=656c1f98&is=6559aa98&hm=a93dc7873bc7935b0ebcac933e103fd85deb3465df774ebdfd7455167a3ca26b&="><p class="Spacer">Flipped</p></a></h2>
               </div>
   
               <nav>
@@ -54,7 +53,7 @@
   
           <div class="mainContent">
               <div class="main-text">
-                  <p>Flipped Is The Most Skunked Discord Server, but is the only Chapter 3 Season 1 hosting server. I recommend you install or shoot yourself.</p>
+                  <p>Flipped is the only Chapter 3 Season 1 hosting server. We are the best server in existence!</p>
                   <button type="button" onclick="location.href='https://discord.gg/Flipped'">DOWNLOAD NOW</button>
                   <a href="https://discord.gg/Flippedfn"><i class="fa-brands fa-discord fa-xl" style="color: #686586;"></i></a>
                   <br>
@@ -63,7 +62,7 @@
                   </div>
               </div>
               <div class="imageMain">
-                  <img src="https://cdn.discordapp.com/attachments/1175237541327274075/1175644069188337705/fortnite-battle-royale-logo-uhd-4k-wallpaper.jpg?ex=656bfadc&is=655985dc&hm=2b84cf2a8672dbcf3d40b90de23421789ce1ed1922e076b5eabd00fac4e84e28&">
+                  <img src="https://cdn.discordapp.com/attachments/1175237565968814090/1175682738586656839/againl.png?ex=656c1ee0&is=6559a9e0&hm=a34b03f09f45250535c6d27e3fc4f46cd1ae4bac5a8c5d140fdc160e9c207d14&">
               </div>
           </div>
       </div>
@@ -122,7 +121,7 @@
               </div>
               <div class="reasonable">
                   <div class="why">
-                      <i class="fa-regular fa-circle-question fa-2x" style="color: #a34cfb;"></i>
+                      <i class="fa-regular fa-circle-question fa-2x" style="color: #4c9efb;"></i>
                       <div class="main-text">
                           <h3>Why?</h3>
                           <p>By donating you are helping us cover the cost for many things not just the VPS but other things we pay so you can play.</p>
@@ -130,7 +129,7 @@
                   </div>
                   <br>
                   <div class="perk">
-                      <i class="fa-solid fa-gift fa-2x" style="color: #a34cfb;"></i>
+                      <i class="fa-solid fa-gift fa-2x" style="color: #4cd8fb;"></i>
                       <div class="main-text">
                           <h3>Perks!</h3>
                           <p>Donators will get cool exclusive perks. Here are some of the perks donators get, cool custom role in Flipped, image perms, private chat, and etc!</p>
@@ -138,7 +137,7 @@
                   </div>
                   <br>
                   <div class="safe">
-                      <i class="fa-solid fa-shield-halved fa-2x" style="color: #a34cfb;"></i>
+                      <i class="fa-solid fa-shield-halved fa-2x" style="color: #4c9efb;"></i>
                       <div class="main-text">
                           <h3>Safety.</h3>
                           <p>Donating to Flipped is 100% safe. Once you donate you will automatically get your perks! If there are any issues with getting your perks please dm one of our managers or the owner himself!</p>
@@ -163,7 +162,7 @@
                 </button>
                 <div class="accordion-content">
                   <p>
-                      On this website or on our Discord server or Github.
+                      On this website or on our Discord server.
                   </p>
                 </div>
               </div>
@@ -212,7 +211,7 @@
                   <button type="button" onclick="location.href='https://discord.gg/Flipped'">DOWNLOAD NOW</button>
               </div>
               <div class="imagePlay">
-                  <img src="https://cdn.discordapp.com/attachments/1175237541327274075/1175644069188337705/fortnite-battle-royale-logo-uhd-4k-wallpaper.jpg?ex=656bfadc&is=655985dc&hm=2b84cf2a8672dbcf3d40b90de23421789ce1ed1922e076b5eabd00fac4e84e28&">
+                  <img src="https://media.discordapp.net/attachments/1151341831565606983/1175679050107338763/flipped.png?ex=656c1b70&is=6559a670&hm=c0b69d4da4509b90db7b3521d30b93e8b5948e0e02f422be566e0bd5e6948b8b&=&width=932&height=524">
               </div>
               <div class="main-text2">
                   <p>Need to contact us? Check out our socials!</p>
@@ -240,7 +239,7 @@
 
 body{
     overflow-x: hidden;
-    background: #080715;
+    background: #050046;
     scroll-behavior: smooth;
 }
 
@@ -270,16 +269,16 @@ body{
   }
    
   ::-webkit-scrollbar-thumb {
-    background: #9837F9; 
+    background: #37f957; 
     transition: all .3s ease-in-out;
   }
   ::-webkit-scrollbar-thumb {
-    background: #9837F9; 
+    background: #37f971; 
     transition: all .3s ease-in-out;
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background: #6e00db; 
+    background: #00db2f; 
     border-radius: 100px;
     transition: all .3s ease-in-out;
   }
@@ -290,7 +289,7 @@ body{
     height: 500px;
     width: 100%;
     min-height: 100vh;
-    background: #080715;
+    background: #060233;
     position: relative;
 }
 
@@ -300,6 +299,7 @@ body{
     width: 1400px;
     max-width: 90%;
     margin: 0 auto;
+    color:#000030
 }
 
 /* left side */
@@ -363,11 +363,11 @@ nav ul li a:active{
 
 nav ul li:not(:last-child) a:hover,
 nav ul li:not(:last-child) a:focus{
-    color: #9837F9;
+    color: #3785f9;
 }
 
 nav ul li.active a{
-    color: #9837F9;
+    color: #3791f9;
 }
 
 /* Login button */
@@ -388,8 +388,8 @@ nav ul li.active a{
 
 .btn:hover{
     background: transparent;
-    color: #6e00db;
-    border: 1px solid #6e00db;
+    color: #0066db;
+    border: 1px solid #0083db;
     padding: 12px 37px;
     border-radius: 12px;
 }
@@ -461,7 +461,7 @@ nav ul li.active a{
 /* glowing button */
 
 .mainContent .main-text button {
-    background: #9837F9;
+    background: #3791f9;
     border: none;
     border-radius: 12px;
     color: white;
@@ -470,7 +470,7 @@ nav ul li.active a{
     position: relative;
   }
 .mainContent .main-text button::before {
-    background: #9837F9;
+    background: #379bf9;
     border-radius: inherit;
     content: '';
     filter: blur(5.5px);
@@ -491,13 +491,13 @@ nav ul li.active a{
 
   @keyframes glow {
     0% {
-      background: #9837F9;
+      background: #37b2f9;
     }
     25% {
-      background: #9837F9;
+      background: #37c2f9;
     }
     100% {
-      background: #9837F9;
+      background: #37ccf9;
     }
   }
 
@@ -519,13 +519,13 @@ nav ul li.active a{
 
 :root {
     --container: 142rem;
-    --primary: #A750FD;
-    --primary1: #6C3CF5;
+    --primary: #509bfd;
+    --primary1: #3c92f5;
     --text-dark: #ffffff;
     --light-dark: #637381;
     --box-shadow: 0 3.9rem 2.3rem -2.7rem rgba(0, 0, 0, 0.04);
-    --btn-border: #9C3EFA;
-    --btn-border1: #7748FF;
+    --btn-border: #3e5afa;
+    --btn-border1: #4891ff;
     --devider: 0.1rem solid #f2f2f2;
     --transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
@@ -567,7 +567,7 @@ nav ul li.active a{
 
 .btn-action:hover {
     background: var(--primary);
-    color: #0a0a1c;
+    color: #022f4b;
 }
 
 .btn-action1 {
@@ -648,7 +648,7 @@ nav ul li.active a{
     left: -1px;
     display: flex;
     top: -40px;
-    background: #492F99;
+    background: #2f7799;
     border-width: 1px 1px 0px 1px;
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.1);
@@ -667,7 +667,7 @@ nav ul li.active a{
     height: 700px;
     border-radius: 0rem 0rem 2rem 2rem;
     margin-top: 40px;
-    background: linear-gradient(180deg, #271960 0%, #200D53 100%);
+    background: linear-gradient(180deg, #192460 0%, #0d2353 100%);
     border: 1px solid rgba(255, 255, 255, 0.1);
     box-shadow: var(--box-shadow);
 }
@@ -720,7 +720,7 @@ nav ul li.active a{
 }
 
 .list1 {
-    color: #684FB5;
+    color: #4f95b5;
 }
 
 .nolist {
@@ -774,7 +774,7 @@ nav ul li.active a{
 
 .accordion .main-text h3{
     font-weight: 400;
-    background: -webkit-linear-gradient(#A750FD, #9C3EFA);
+    background: -webkit-linear-gradient(#509bfd, #3e9ffa);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -789,7 +789,7 @@ nav ul li.active a{
 }
 
 .accordion .accordion-item {
-    border-bottom: 1px solid #18172C;
+    border-bottom: 1px solid #046481;
   }
   .accordion button {
     position: relative;
@@ -968,7 +968,7 @@ nav ul li.active a{
 }
 
 .donateContent .donate-text button {
-    background: #9837F9;
+    background: #37b2f9;
     border: none;
     border-radius: 12px;
     color: white;
@@ -977,7 +977,7 @@ nav ul li.active a{
     position: relative;
   }
 .donateContent .donate-text button::before {
-    background: #9837F9;
+    background: #37b2f9;
     border-radius: inherit;
     content: '';
     filter: blur(5.5px);
@@ -998,13 +998,13 @@ nav ul li.active a{
 
   @keyframes glow {
     0% {
-      background: #9837F9;
+      background: #3791f9;
     }
     25% {
-      background: #9837F9;
+      background: #37dcf9;
     }
     100% {
-      background: #9837F9;
+      background: #37dcf9;
     }
   }
 
@@ -1135,7 +1135,7 @@ nav ul li.active a{
 /* glowing button */
 
 .mainContent .main-text1 button {
-    background: #9837F9;
+    background: #37abf9;
     border: none;
     border-radius: 12px;
     color: white;
@@ -1144,7 +1144,7 @@ nav ul li.active a{
     position: relative;
   }
 .mainContent .main-text1 button::before {
-    background: #9837F9;
+    background: #37a2f9;
     border-radius: inherit;
     content: '';
     filter: blur(5.5px);
@@ -1165,13 +1165,13 @@ nav ul li.active a{
 
   @keyframes glow {
     0% {
-      background: #9837F9;
+      background: #37c2f9;
     }
     25% {
-      background: #9837F9;
+      background: #37f9df;
     }
     100% {
-      background: #9837F9;
+      background: #37ccf9;
     }
   }
 
